logs/biblio-py.log
Listing '.'...
Listing './bin'...
Compiling './bin/bibextract.py'...
***   File "./bin/bibextract.py", line 173
    if op.verbose:  print '# Loading database %s ...' %(fname)
                                                    ^
SyntaxError: invalid syntax

Compiling './bin/bibmanage.py'...
***   File "./bin/bibmanage.py", line 121
    if op.verbose:  print '# Loading database...'
                                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/get_papers.py'...
***   File "./bin/get_papers.py", line 9
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/biblio_py-0.6.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/query_ads'...
Compiling './lib/python3.5/site-packages/query_ads/query_ads.py'...
***   File "./lib/python3.5/site-packages/query_ads/query_ads.py", line 268
    print '# Using proxy', self.proxy
                        ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/yapbib'...
Compiling './lib/python3.5/site-packages/yapbib/adsparse.py'...
***   File "./lib/python3.5/site-packages/yapbib/adsparse.py", line 218
    print '%d ADS items parsed\n'%(len(b.keys()))
                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/yapbib/bibitem.py'...
***   File "./lib/python3.5/site-packages/yapbib/bibitem.py", line 208
    raise AttributeError, "who must be author or editor, not %s"%(who)
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/yapbib/biblist.py'...
***   File "./lib/python3.5/site-packages/yapbib/biblist.py", line 60
    except:  raise TypeError, 'Argument incorrect type, must be BibList object'
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/yapbib/bibparse.py'...
***   File "./lib/python3.5/site-packages/yapbib/bibparse.py", line 101
    print b['author']
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './share'...
Listing './share/python-wheels'...
